T3: Implement loading POI.

--- a/NearbyWiki/Application/Resources/Localizable.strings
+++ b/NearbyWiki/Application/Resources/Localizable.strings
@@ -10,3 +10,4 @@
 "You" = "You";
 
 "Failed to get location" = "Failed to get location";
+"Failed to load nearby places" = "Failed to load nearby places";
