--- a/NearbyWiki/Application/Resources/Localizable.strings
+++ b/NearbyWiki/Application/Resources/Localizable.strings
@@ -11,3 +11,4 @@
 
 "Failed to get location" = "Failed to get location";
 "Failed to load nearby places" = "Failed to load nearby places";
+"Failed to load routes" = "Failed to load routes";
