--- a/NearbyWiki/Application/Resources/Localizable.strings
+++ b/NearbyWiki/Application/Resources/Localizable.strings
@@ -10,5 +10,5 @@
 "You" = "You";
 
 "Failed to get location" = "Failed to get location";
-"Failed to load nearby places" = "Failed to load nearby places";
+"Failed to load points of interest" = "Failed to load points of interest";
 "Failed to load routes" = "Failed to load routes";
